content/themes/dude/sass/layout/_site-footer.scss
/* ... */
.cookie-notification-wrapper {
  position: fixed;
  bottom: 0;
  right: 0;
  background: #fff;
  width: 100%;
  padding: 10px;
  line-height: 1.5;
  z-index: 100;
  box-shadow: 0 0 40px rgba(85, 85, 85, .2);
  transition: all .55s;
  opacity: 1;

  @media(min-width: 620px) {
    height: 50px;
    overflow: hidden;
  }

  @media(max-width: 620px) {
    box-shadow: 0;
    width: 100%;
    bottom: 0;
    right: 0;
  }

  &.fadeout {
    animation: fadeOutUp 1s;
    opacity: 0;
  }

  .content {
    padding: 0;
    line-height: 1;
    max-width: 590px;
    margin-left: auto;
    margin-right: auto;

    @media(max-width: 620px) {
      max-width: 100%;
      margin: 0;
    }

    .content-text {
      width: 80%;
      float: left;
    }

    .button-wrapper {
      width: 20%;
      float: left;
      text-align: right;
    }

    @media(max-width: 620px) {
      .content-text {
        @include column(4/7);
      }

      .button-wrapper {
        @include column(3/7);
      }
    }

    p {
      font-size: 15px;
      line-height: 1.5;
      padding: 4px;
      margin: 0;

      @media(max-width: 620px) {
        font-size: 13px;
        padding: 0;
      }

      b {
        font-family: $font-headings;
      }

      a {
        color: #666;
        text-decoration: none;
        text-shadow: 1px 1px 0 #fff, -1px 1px 0 #fff, 2px 0 0 #fff, -2px 0 0 #fff;
        box-shadow: inset 0 -1px 0 0 #fff, inset 0 -3px 0 0 #ccc;
        transition: all .55s;

        &:hover {
          color: #000;
          box-shadow: inset 0 -1px 0 0 #fff, inset 0 -4px 0 0 $color-links;
        }

        &.button {
          @extend .default;
          background: transparent;
          width: auto;
          display: inline-block;
          text-decoration: none;
          position: relative;
          cursor: pointer;
          border-radius: 0;
          appearance: none;
          transition: all .5s;
          font-family: $font-headings;
          border: 2px solid $color-body;
          text-transform: uppercase;
          font-weight: 700;
          color: $color-body;
          font-size: 11px;
          padding: 5px 15px;
          text-shadow: none;
          box-shadow: none;
          white-space: nowrap;
          overflow: hidden;

          @media(min-width: 620px) {
            margin-top: -4px;
          }

          @media(max-width: 620px) {
            float: right;
            text-align: center;
            top: -5px;
            padding: 5px 25px;
          }

          // iPhone SE
          @media(max-width: 320px) {
            width: 100%;
            top: -5px;
            padding-left: 0;
            padding-right: 0;
          }

          &:hover,
          &:focus {
            color: #fff;
            border-color: $color-body;
            box-shadow: 0 -32px 0 $color-body inset;
            background: $color-body;
          }
        }
      }
    }
  }
}

